--- a/style.css
+++ b/style.css
@@ -38,19 +38,22 @@ header{
 
 }
 .user{
+	margin: auto;
+    display: table;
 }
 .user h4{
 	color: #f5f5f5;
+	float: left;
 	margin: 16px 20px 0;
 	font-size: 20px;
-	letter-spacing: 2px;
+	letter-spacing: 5px;
 	font-weight: 300;
 	text-transform: uppercase;
 }
 .user img{
 	border-radius: 50%;
 	width: 60px;
-
+	float: left;
 }
 .slogan{
 	background-image: url(image/section-bg-3.jpg);
