--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ header{
 	top: 0;
 	width: 100%;
 	z-index: 1;
-
 }
 .user{
 	margin: auto;
@@ -56,7 +55,7 @@ header{
 	float: left;
 }
 .slogan{
-	background-image: url(image/section-bg-3.jpg);
+	background-image: url(../images/section-bg-1.jpg);
 	background-size: 100%;
 	height: 500px;
 	position: relative;
@@ -109,7 +108,7 @@ header{
 	margin-top: 10px;
 }
 .video{
-	background-image: url(image/section-bg-17.jpg);
+	background-image: url(../images/section-bg-.jpg);
 	overflow: hidden;
 	padding: 40px 6%;
 }
@@ -248,7 +247,7 @@ footer p{
 }
 .about-me{
 	min-height: 60px;
-	max-height: 190px;
+	max-height: 184px;
     padding: 13px;
     font-size: 14px;
     color: #777;
